# xcube-clms

./: .gitignore  CHANGES.md  CONTRIBUTING.md  README.md  SECURITY.md  environment.yml  pyproject.toml
.github/: unittest.yml
.github/workflows/: publish.yml  unittest.yml
examples/notebooks/: CLMSDataStoreTutorial.ipynb  CLMS_LEGACY_datasets_processing.ipynb  CLMS_lazy_load-CDSE.ipynb  CLMS_lazy_load.ipynb  CLMS_multiple_files_EEA_datasets_processing.ipynb  CLMS_multiple_files_processing.ipynb  CLMS_preload-EEA.ipynb  CLMS_preload.ipynb  CLMS_single_file_EEA_datasets_processing.ipynb  CLMS_single_file_processing.ipynb
test/: __init__.py  conftest.py  test_api_token.py  test_api_token_handler.py  test_cache_manager.py  test_clms.py  test_download_manager.py  test_preload.py  test_processor.py  test_prod_handler.py  test_store.py  test_token_handler.py  test_utils.py
test/product_handlers/: test_cdse.py  test_eea.py  test_legacy.py
xcube_clms/: __init__.py  api_token.py  api_token_handler.py  cache_manager.py  clms.py  constants.py  download_manager.py  event.py  plugin.py  preload.py  preload_handle.py  preloadtask.py  processor.py  product_handler.py  store.py  task.py  token_handler.py  utils.py  version.py
xcube_clms/product_handlers/: __init__.py  cdse.py  eea.py  legacy.py
