[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xcube_clms"
dynamic = ["version"]
authors = [
    { name = "Yogesh Kumar Baljeet Singh", email = "yogesh.baljeetsingh@brockmann-consult.de" }
]
description = """\
  xcube datastore for accessing datasets through the CLMS API\
  """
keywords = [
    "analysis ready data", "data science", "datacube", "xarray", "zarr", "xcube", "clms"
]
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "requests",
    "xarray",
    "xcube",
    "tqdm",
    "cryptography",
    "requests",
    "fsspec",
]

[tool.setuptools.dynamic]
version = { attr = "xcube_clms.__version__" }

[tool.setuptools.packages.find]
exclude = ["test*", "doc*"]

[project.optional-dependencies]
dev = [
    "numpy",
    "pytest",
    "black",
    "flake8",
    "pytest-cov",
    "pytest-recording"
]

[project.urls]
Repository = 'https://github.com/xcube-dev/xcube-clms'
Issues = 'https://github.com/xcube-dev/xcube-clms/issues'
Changelog = 'https://github.com/xcube-dev/xcube-clms/blob/main/CHANGES.md'
